test/cases/function_arguments_structure.ref
Error: Compiler error at line 10:23:
	Structures as function arguments are not yet supported: SolarPanels(name=None)
